# seo-audit-tool

./: .gitignore  LICENSE  README.md  license_gate.py  pyproject.toml  seo_audit.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
seo_audit_tool/: __init__.py  auditor.py  cli.py  licensing.py
tests/: test_licensing.py
